--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{secrets.DOCKERHUB_USERNAME}}
-          password: ${{secrets.DOCKERHUB_TOKEN}}
+          username: ${{secrets.DHUB_USERNAME}}
+          password: ${{secrets.DHUB_TOKEN}}
 
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ${{secrets.DOCKERHUB_USERNAME}}/${{secrets.DOCKERHUB_REPO_NAME}}:latest
+          tags: ${{secrets.DHUB_USERNAME}}/${{secrets.DHUB_REPO_NAME}}:latest
